# yet-another-ytdlp-gui

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  localization.yml
.github/workflows/: build.yml  lint.yml
assets/: tailwind.css
assets/styling/: main.css
locales/: de.ftl  en.ftl
src/: app.rs  i18n.rs  main.rs
src/app/: actions.rs  backend.rs  formatting.rs  storage.rs
src/components/: download.rs  echo.rs  forms.rs  mod.rs  shell.rs  status.rs  titlebar.rs
src/views/: advanced.rs  audio.rs  error.rs  format.rs  home.rs  library.rs  mod.rs  naming.rs  playlist.rs  presets.rs  queue.rs  ready.rs  settings.rs
