[package]
name = "yaydlp"
version = "0.1.0"
authors = ["Bilal <bilalprvat@gmail.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router"] }
fluent-bundle = "0.15"
futures-util = "0.3.32"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["io-util", "process", "time"] }
unic-langid = "0.9"
yt-dlp = { version = "=2.1.0", default-features = false, features = ["rustls"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
